# homeassistant-local-akuvox

./: .codespellrc  .grype.yaml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  REUSE.toml  hacs.json  pyproject.toml
.github/: dependabot.yml  release-drafter.yml
.github/agents/: copilot-instructions.md
.github/workflows/: build-test.yaml  publish-wiki.yaml  release-drafter.yaml  release.yaml  validate.yaml
.specify/memory/: constitution.md
.specify/scripts/bash/: update-agent-context.sh
LICENSES/: LicenseRef-NOASSERTION  LicenseRef-NOASSERTION.txt
custom_components/: __init__.py
custom_components/akuvox/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  lock.py  manifest.json  services.yaml  strings.json  webhook.py
custom_components/akuvox/translations/: en.json
custom_components/local_akuvox/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  event.py  lock.py  manifest.json  number.py  sanitize.py  services.yaml  strings.json  switch.py  webhook.py
custom_components/local_akuvox/translations/: en.json
specs/001-akuvox-lock-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-akuvox-lock-integration/checklists/: requirements.md
specs/001-akuvox-lock-integration/contracts/: config-flow.md  coordinator.md  lock-entity.md
specs/002-device-config-discovery/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-device-config-discovery/checklists/: requirements.md
specs/003-schedule-user-services/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-schedule-user-services/checklists/: requirements.md
specs/003-schedule-user-services/contracts/: schedule-services.md  user-services.md
specs/004-webhook-endpoint/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-webhook-endpoint/checklists/: requirements.md
specs/004-webhook-endpoint/contracts/: config-flow-webhook.md  payload-sanitization.md  webhook-handler.md
specs/005-add-lock-action/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-add-lock-action/checklists/: requirements.md
specs/005-add-lock-action/contracts/: lock-service.md
tests/: __init__.py  conftest.py  test_config_flow.py  test_contact_group_services.py  test_coordinator.py  test_init.py  test_lock.py  test_sanitize.py  test_services.py  test_webhook.py
wiki/: Configuration.md  Device-Setup.md  Home.md  Installation.md  Services.md  Troubleshooting.md  Webhook-Events.md
